--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,50 @@
 /*  your css code here. If applicable */
+ body {
+            background-color: #f8f8f8;
+            border: 1px solid black;
+            margin: 15px 105px;
+            box-sizing: border-box;
+            box-shadow: 1px 1px 10px black;
+        }
+        
+        div h2 {
+            text-align: center;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+        }
+        
+        hr {
+            border: 21px solid #ffffff;
+        }
+        
+        .book {
+            display: flex;
+            justify-content: center;
+        }
+        
+        .book-library {
+            background-color: #ededed;
+        }
+        
+        .price-block {
+            background-color: #2ecc71;
+            margin: 12px;
+            color: white;
+            text-align: center;
+            border-radius: 5px;
+            padding: 5px;
+        }
+        
+        .author {
+            color: #777777;
+            position: relative;
+            top: 12px;
+            left: 12px;
+        }
+        
+        .book-name {
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            font-weight: bold;
+            position: relative;
+            left: 12px;
+            top: 29px;
+        }
