--- a/styles.css
+++ b/styles.css
@@ -1,50 +1,40 @@
-/*  your css code here. If applicable */
- body {
-            background-color: #f8f8f8;
-            border: 1px solid black;
-            margin: 15px 105px;
-            box-sizing: border-box;
-            box-shadow: 1px 1px 30px black;
-        }
-        
-        div h2 {
-            text-align: center;
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
-        }
-        
-        hr {
-            border: 21px solid #ffffff;
-        }
-        
-        .book {
-            display: flex;
-            justify-content: center;
-        }
-        
-        .book-library {
-            background-color: #ededed;
-        }
-        
-        .price-block {
-            background-color: #2ecc71;
-            margin: 12px;
-            color: white;
-            text-align: center;
-            border-radius: 5px;
-            padding: 5px;
-        }
-        
-        .author {
-            color: #777777;
-            position: relative;
-            top: 12px;
-            left: 12px;
-        }
-        
-        .book-name {
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
-            font-weight: bold;
-            position: relative;
-            left: 12px;
-            top: 29px;
-        }
+*{
+	text-align:center;
+	background-color:#f8f8f8;
+}
+ 
+.book-library{
+	margin-top:0px;
+	background-color:rgb(255, 255, 255);
+/* 	padding:5px; */
+	
+}
+ 
+.book-library h1{
+	padding:20px;
+}
+ 
+.author{
+	text-align:start;
+	color:rgb(119, 119, 119);
+}
+h2{
+	text-align:start;
+}
+ 
+.book img{
+	padding:50px;
+	
+}
+ 
+ div .price-block{
+	color:white;
+	background-color:rgb(46, 204, 113);
+	padding:10px;
+	border-radius:5px;
+}
+ 
+.book{
+    margin-top: 20px;
+    padding-bottom: 5px;
+}
